--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- navbar header -->
 <div class="nav-header">
   <div class="nav-brand">
-    <img src="https://s3-us-west-2.amazonaws.com/parallax-theme/assets/bradlogo2.png">
+    <img src="https://i.imgur.com/1ydRbtM.png">
   </div>
   <i class="fa fa-bars fa-3x"></i>
     <div class="header-links">
