algumas mudanças pra mobile(contato) e prévia do slide 7

--- a/index.html
+++ b/index.html
@@ -113,22 +113,11 @@
       </div>
     </div>
    <!-- fim liderança -->
-  
 
    <!-- inicio empresas --> 
-  <div class="section pequenas" data-anchor="empresas">
+  <div class="section" data-anchor="empresas">
       <div class="content">
         <h1 class="wow fadeInDown" data-wow-delay="0.2s">Pequenas Empresas</h1>
-        <div>
-        <p style="font-size: 18px;">Com o objetivo de levar as melhores práticas da gestão, das grandes corporações, para o incremento do desempenho das pequenas empresas, a <span style="color: #db3e39;font-weight: bold;">Estrategistas</span> desenvolveu um programa de desenvolvimento da gestão específico para este segmento. Comum diagnóstico inicial gratuito, a equipe de consultores pequenas empresas oferece ao empresário uma solução customizada, na área da gestão identificada no diagnóstico. Uma solução rápida e na medida da <span style="font-weight: bold;">necessidade</span>.</p>
-
-        <img src="img/DC-Desenvolvimento-Comercial-Banner-1030x685.png" style="position: initial center; max-width: 60%;border-radius: 3px;">
-
-        <br><br>
-
-
-        <p style="font-size: 18px;">Formada por jovens profissionais, especialistas nas áreas da gestão essenciais para o negócio e coordenada por consultor sênior, este time oferece uma perspectiva a frente de seu tempo, inovadora e comprometida com o <span style="font-weight: bold;">resultado</span>.</p>
-        </div>
       </div>
     </div>
    <!-- fim empresas -->
@@ -140,7 +129,7 @@
           <p>(62) xxxx-xxxx</p>
           <p>Envie-nos a sua mensagem</p>
           <br>
-        <div class="contact-form">
+        <div class="contact-form" style="width:50%; float: left;">
   
           <div id="form-messages"></div>
           <form id="ajax-contact" method="post" role="form" action="contact.php" data-toggle="validator">
@@ -172,10 +161,11 @@
         </div>
 
         <div class="contact-map">
-          <p style="color: #db3e39;font-weight: bold;">Aonde nos encontrar:</p>
+          <p style="color: rgb(261,61,56);font-weight: bold;">Aonde nos encontrar:</p>
           <p class="map-font">Nosso trabalho não é de escritório, é gerar resultado para empresas, nas empresas. As vezes podemos não responder o telefone, mas é só preencher o formulário que um de nossos consultores responderá assim que possível.</p>
-          <p style="color: #db3e39;font-weight: bold;">Endereço</p><p class="map-font">R. T-30, 2319 – Setor Bueno – Goiânia/GO</p>
-          <div id="mapa">  
+          <p style="color: rgb(261,61,56);font-weight: bold;">Endereço</p><p class="map-font">R. T-30, 2319 – Setor Bueno – Goiânia/GO</p>
+          <div id="mapa">
+              
               <script>
             function myMap() {
             var mapProp= {
@@ -185,6 +175,7 @@
               var map=new google.maps.Map(document.getElementById("mapa"),mapProp);
               }
               </script>
+
           </div>
 
 
