--- a/index.html
+++ b/index.html
@@ -116,9 +116,8 @@
 
         <!--PEDROO-AQUI GABRIEL -->
 
-    <div class="responsive tooltip">
+    <div class="responsive">
       <div class="gallery">
-        <span class="tooltip">Ourolac</span>
         <a href="#">
           <img src="img/ourolac.png" alt="Trolltunga Norway" width="300" height="200">
         </a>
