--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <div class="section aboutme" data-anchor="inicio">
     <div class="opaque-bg animated fadeInDown">
-      <h1 style="color: rgb(218,62,57); font-size: 60px;">Estrategistas</h1>
+      <h1 style="color: rgb(218,62,57);">Estrategistas</h1>
       <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
     </div>
       <i id="moveDown" class="fa fa-chevron-down fa-3x bounce"></i>
