--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div class="section" data-anchor="convite">
     <div class="content">
       <h1 class="wow fadeInDown" data-wow-delay="0.2s">Convite</h1><br><br>
-      <p class="wow fadeInDown" data-wow-delay="0.4s" style="text-align: justify;">Se voce procura melhores resultados para sua empresa, conheça o Programa de desenvolvimento da Gestão, o PDG.<br><br>
+      <p class="wow fadeInDown" data-wow-delay="0.4s" style="text-align: justify; margin: 5%;">Se voce procura melhores resultados para sua empresa, conheça o Programa de desenvolvimento da Gestão, o PDG.<br><br>
         Acreditamos que, através da implantação do PDG, os resultados tornam-se realidade pois a metodologia alinha todos os recursos para o que a empresa deseja ser.<br><br>
         Com o PDG, você assume o comando efetivo da sua empresa, conduzindo-a para os objetivos desejados e reduzindo os impactos externos. É como "assumir os remos e vencer as marés.”</p>
     </div> <br><br><br>
