--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a href="#">
-          <img src="img/ourolac.png" alt="Trolltunga Norway" width="300" height="200">
-        </a>
+        <a href="">
+          <img src="img/ourolac.png" alt="Ourolac" width="300" height="200">
+      </a>
           </div>
         </div>
 
@@ -181,10 +181,14 @@
 
           <div class="clearfix"></div>
 
-<!--PEDROOOOO-->
+
         
       </div>
     </div>
+
+<!-- PEDROOO -->
+
+
    <!-- fim liderança -->
   
 
@@ -192,15 +196,15 @@
   <div class="section pequenas" data-anchor="empresas">
       <div class="content">
         <h1 class="wow fadeInDown" data-wow-delay="0.2s">Pequenas Empresas</h1>
-        <div>
-        <p style="font-size: 16px;">Com o objetivo de levar as melhores práticas da gestão, das grandes corporações, para o incremento do desempenho das pequenas empresas, a <span style="color: #db3e39;font-weight: bold;">Estrategistas</span> desenvolveu um programa de desenvolvimento da gestão específico para este segmento. Comum diagnóstico inicial gratuito, a equipe de consultores pequenas empresas oferece ao empresário uma solução customizada, na área da gestão identificada no diagnóstico. Uma solução rápida e na medida da <span style="font-weight: bold;">necessidade</span>.</p>
-
-        <img src="img/DC-Desenvolvimento-Comercial-Banner-1030x685.png" style="position: initial center; max-width: 60%;border-radius: 3px;">
-
         <br><br>
-
-
-        <p style="font-size: 16px;">Formada por jovens profissionais, especialistas nas áreas da gestão essenciais para o negócio e coordenada por consultor sênior, este time oferece uma perspectiva a frente de seu tempo, inovadora e comprometida com o <span style="font-weight: bold;">resultado</span>.</p>
+        <div class="pequenastexto1">
+        <p class="wow fadeInDown" data-wow-delay="0.4s" style="text-align: justify;">Com o objetivo de levar as melhores práticas da gestão, das grandes corporações, para o incremento do desempenho das pequenas empresas, a <span style="color: #db3e39;font-weight: bold;">Estrategistas</span> desenvolveu um programa de desenvolvimento da gestão específico para este segmento. Comum diagnóstico inicial gratuito, a equipe de consultores pequenas empresas oferece ao empresário uma solução customizada, na área da gestão identificada no diagnóstico. Uma solução rápida e na medida da <span style="font-weight: bold;">necessidade</span>.</p>
+      </div>
+      <div class="pequenasimg wow fadeInDown" data-wow-delay="0.4s">
+      </div>
+        <div class="pequenastexto2">
+          <br>
+        <p class="wow fadeInDown" data-wow-delay="0.4s" style="text-align: justify;">Formada por jovens profissionais, especialistas nas áreas da gestão essenciais para o negócio e coordenada por consultor sênior, este time oferece uma perspectiva a frente de seu tempo, inovadora e comprometida com o <span style="font-weight: bold;">resultado</span>.</p>
         </div>
       </div>
     </div>
