--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
      <!-- Video -->
     <div>
     <a href="#test-popup" class="open-popup-link">
-      <img src="https://i.ytimg.com/vi/OZIMVPCa3F8/maxresdefault.jpg" style="max-width: 900px;" center>
+      <img src="https://i.ytimg.com/vi/OZIMVPCa3F8/maxresdefault.jpg" style="max-width: 400px;" center>
     </a>
     <div id="test-popup" class="white-popup mfp-hide">
-      <iframe width="960" height="560" src="https://www.youtube.com/embed/uhBBpfk2DWk?autoplay=1&controls=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe width="960" height="560" src="https://www.youtube.com/embed/uhBBpfk2DWk" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
     </div>
     <!-- Final video -->
