--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Estrategistas</title>
   <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,400,600' rel='stylesheet' type='text/css'>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.css" rel="stylesheet" type="text/css">
-  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/popup.css">
 </head>
 
 <body>
@@ -57,24 +57,23 @@
 <!-- end navbar slider -->
 
 <!-- begin fullpage -->
-
 <div id="fullpage">
  <!-- <iframe width="854" height="480" src="https://www.youtube.com/embed/uhBBpfk2DWk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
   <!-- inicio inicio -->
 
   <div class="section aboutme" data-anchor="inicio">
     <div class="opaque-bg animated fadeInDown">
-      <h1 style="color: rgb(218,62,57);">Estrategistas</h1>
-      <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
+      <h1 style="color: rgb(218,62,57);">Estrategistas</h1></br></br>
     </div>
      <!-- Video -->
     <div>
-    <a href="#test-popup" class="open-popup-link">
-      <img src="https://i.ytimg.com/vi/OZIMVPCa3F8/maxresdefault.jpg" style="max-width: 400px;" center>
-    </a>
     <div id="test-popup" class="white-popup mfp-hide">
       <iframe width="960" height="560" src="https://www.youtube.com/embed/uhBBpfk2DWk" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
+    <a href="#test-popup" class="open-popup-link">
+      <img src="https://i.ytimg.com/vi/OZIMVPCa3F8/maxresdefault.jpg" style="max-width: 400px;" center>
+    </a>
+    
     </div>
     <!-- Final video -->
       <i id="moveDown" class="fa fa-chevron-down fa-3x bounce"></i>
