arrumando pg inicial

--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 
   <div class="section aboutme" data-anchor="inicio">
     <div class="opaque-bg animated fadeInDown">
-      <h1 style="color: rgb(218,62,57);">Estrategistas</h1>
-      <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
+      <h1 style="color: rgb(218,62,57);">Estrategistas</h1></br></br>
     </div>
      <!-- Video -->
     <div>
