--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
      <!-- Video -->
     <div>
     <a href="#test-popup" class="open-popup-link">
-      <img src="https://i.ytimg.com/vi/OZIMVPCa3F8/maxresdefault.jpg" style="max-width: 400px;" center>
+      <img src="https://i.ytimg.com/vi/OZIMVPCa3F8/maxresdefault.jpg" style="max-width: 400px;" center class="wow fadeInUp" data-wow-delay="0.5s">
     </a>
     <div id="test-popup" class="white-popup mfp-hide">
       <iframe width="960" height="560" src="https://www.youtube.com/embed/uhBBpfk2DWk" allow="autoplay; encrypted-media" allowfullscreen></iframe>
