ícones,textos e detalhezinhos corrigidos!

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         <div class="pequenastexto2">
           <br>
-        <p class="wow fadeInDown" data-wow-delay="0.4s" style="text-align: justify;">Formada por jovens profissionais, especialistas nas áreas da gestão essenciais para o negócio e coordenada por consultor sênior, este time oferece uma perspectiva a frente de seu tempo, inovadora e comprometida com o <span style="font-weight: bold;">resultado</span>.</p>
+        <p class="wow fadeInDown" data-wow-delay="0.4s">Formada por jovens profissionais, especialistas nas áreas da gestão essenciais para o negócio e coordenada por consultor sênior, este time oferece uma perspectiva a frente de seu tempo, inovadora e comprometida com o <span style="font-weight: bold;">resultado</span>.</p>
         </div>
       </div>
     </div>
@@ -306,28 +306,12 @@
    <!-- fim clientes -->
 
 
-    <!-- inicio Escola de negócios 
-      USA PEDROOOOOOOOOOOOOOOOOOO style="border:1px solid red;position: inherit;"--> 
+    <!-- inicio Escola de negócios -->
  <div class="section" data-anchor="market"">
     <div class="content"">
       <br>
       <br>
       <h1 class="wow fadeInDown" data-wow-delay="0.2s">Escola de Negócios</h1><br>
-   
-      <style type="text/css">
-        #owl-demo .owl-item div{
-        padding:5px;
-      }
-      #owl-demo .owl-item img{
-        display: block;
-        width: 50%;
-        height: 240px;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-}
-</style>
-
 
     <div id="owl-carousel" class="owl-carousel owl-theme wow fadeInDown" data-wow-delay="0.4">
   <div>
@@ -354,7 +338,7 @@
 </div>
 <br>
     <div class="textonegocio2">
-      <p>Clicando na imagem você será redirecionado ao site do IEG onde poderá ter mais informações sobre as respectivas pautas.</p>
+      <p style="color:#db3e39;font-weight:bold;text-decoration:underline;">Clicando na imagem você será redirecionado ao site do IEG onde poderá ter mais informações sobre as respectivas pautas.</p>
       <p class="wow fadeInDown" data-wow-delay="0.4" style="text-align: justify;">
         Nós, Estrategistas, somos associados ao <span style="color: #08086f;font-weight:bold;">IEG</span>, o Instituto de Engenharia de Gestão, com sede no Rio de Janeiro / RJ, nos estados do Paraná, Distrito Federal e Goias. Com esta parceria, viabilizamos presencialmente a formação completa do time dos nossos clientes, de jovens empreendedores, de jovens executivos, que desejam destacar-se no mercado de trabalho e na carreira. <span style="font-weight:bold;">Formação completa em Excel, Comunicação, Negociação, Criatividade, Logística, Projetos e o MBA Jr.</span>
       </p>
@@ -425,12 +409,9 @@
 
   <div class="section fp-auto-height">
     <div class="footer">
-      <p>&copy;Level 5</p>
+      <p><a href="https://level5jr.com.br" target="_blank" style="color:rgb(20, 20, 30);font-weight:195;">&copy;Level 5</a></p>
       <div class="social-links">
-        <span><a href="link.level" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></span>
-        <span><a target="_blank" href="link.level" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></span>
-        <span><a href="link.level" target="_blank"><i class="fa fa-github fa-2x"></i></a></span>
-        <span><a href="link.level"><i class="fa fa-codepen fa-2x"></i></a></span>
+        <span><a href="https://www.instagram.com/estrategistas_/?hl=pt-br" target="_blank"><i class="fa fa-instagram fa-3x"></i></a></span>
       </div>
     </div>
   </div>
