--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- Mobile -->
 
     <section>
-      <style scoped>
+      <style>
         @media only screen and (max-width: 720px) {
           .mobile{ 
             display: inline !important; 
