--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
      <!-- Video -->
     <!-- Mobile -->
-
+    <div>
     <section>
       <style>
         @media only screen and (max-width: 720px) {
@@ -109,7 +109,7 @@
         <img src="https://i.ytimg.com/vi_webp/XA5ju0NOjtU/sddefault.webp" style="max-width: 350px;" center class="wow fadeInUp" data-wow-delay="0.5s">
       </a>
     </div>
-    
+  </div>
      <!-- Desktop -->
     <div class="mobile-hide">
     <a href="#test-popup" class="open-popup-link">
