--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
       </style>
     <div class="mobile desktop-hide">
       <a href="https://www.youtube.com/watch?v=XA5ju0NOjtU">
-        <img src="https://i.ytimg.com/vi_webp/XA5ju0NOjtU/sddefault.webp" style="max-width: 350px;" center class="wow fadeInUp" data-wow-delay="0.5s">
+        <img src="img/thumb.png" style="max-width: 350px;" center class="wow fadeInUp" data-wow-delay="0.5s">
       </a>
     </div>
   </div>
      <!-- Desktop -->
     <div class="mobile-hide">
     <a href="#test-popup" class="open-popup-link">
-      <img src="https://i.ytimg.com/vi_webp/XA5ju0NOjtU/sddefault.webp" style="max-width: 400px;" center class="wow fadeInUp" data-wow-delay="0.5s">
+      <img src="img/thumb.png" style="max-width: 400px;" center class="wow fadeInUp" data-wow-delay="0.5s">
     </a>
     <div id="test-popup" class="white-popup mfp-hide">
       <iframe width="960" height="560" src="https://www.youtube.com/embed/XA5ju0NOjtU" allow="autoplay; encrypted-media" allowfullscreen></iframe>
