--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <h1 class="wow fadeInDown" data-wow-delay="0.2s">Pequenas Empresas</h1>
         <br><br><br>
         <div class="pequenastexto1">
-        <p class="wow fadeInDown" data-wow-delay="0.4s" style="text-align: justify;">Com o objetivo de levar as melhores práticas da gestão, das grandes corporações, para o incremento do desempenho das pequenas empresas, a <span style="color: #db3e39;font-weight: bold;">Estrategistas</span> desenvolveu um programa de desenvolvimento da gestão específico para este segmento. Comum diagnóstico inicial gratuito, a equipe de consultores pequenas empresas oferece ao empresário uma solução customizada, na área da gestão identificada no diagnóstico. Uma solução rápida e na medida da <span style="font-weight: bold;">necessidade</span>.</p>
+        <p class="wow fadeInDown" data-wow-delay="0.4s" style="text-align: center;">Com o objetivo de levar as melhores práticas da gestão, das grandes corporações, para o incremento do desempenho das pequenas empresas, a <span style="color: #db3e39;font-weight: bold;">Estrategistas</span> desenvolveu um programa de desenvolvimento da gestão específico para este segmento. Comum diagnóstico inicial gratuito, a equipe de consultores pequenas empresas oferece ao empresário uma solução customizada, na área da gestão identificada no diagnóstico. Uma solução rápida e na medida da <span style="font-weight: bold;">necessidade</span>.</p>
       </div>
       <div class="pequenasimg wow fadeInDown" data-wow-delay="0.4s">
       </div>
@@ -339,8 +339,8 @@
 
 
     <!-- inicio Escola de negócios -->
- <div class="section" data-anchor="market"">
-    <div class="content"">
+ <div class="section" data-anchor="market">
+    <div class="content">
       <br>
       <br>
       <h1 class="wow fadeInDown" data-wow-delay="0.2s">Escola de Negócios</h1><br>
@@ -388,19 +388,19 @@
           <div id="form-messages"></div>
           <form id="ajax-contact" method="post" role="form" action="contact.php" data-toggle="validator">
             <div class="form-group has-feedback wow fadeInLeft" data-wow-delay="0.6s" >
-              <input type="text" class="form-control" id="name" name="name" placeholder="NAME" data-error="Field can't be blank!" required>
+              <input type="text" class="form-control" id="name" name="name" placeholder="NOME" data-error="Nada pode estar em branco!" required>
               <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
               <div class="help-block with-errors"></div>
             </div>
   
             <div class="form-group has-feedback wow fadeInRight" data-wow-delay="0.8s" >
-              <input type="email" class="form-control" id="email" name="email" placeholder="EMAIL" data-error="Field can't be blank!" required>
+              <input type="email" class="form-control" id="email" name="email" placeholder="EMAIL" data-error="Nada pode estar em branco!" required>
               <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
               <div class="help-block with-errors"></div>
             </div>
   
             <div class="form-group has-feedback wow fadeInLeft" data-wow-delay="1s">
-              <textarea data-minlength="10" class="form-control" id ="message" name="message" placeholder="MESSAGE" data-error="Minimum of 10 characters" required></textarea>
+              <textarea data-minlength="10" class="form-control" id ="message" name="message" placeholder="MENSAGEM" data-error="No mínimo 10 caracteres" required></textarea>
               <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
               <div class="help-block with-errors"></div>
             </div>
