--- a/index_en.html
+++ b/index_en.html
@@ -352,7 +352,7 @@
     <a href="https://ieg.com.br/sobre-o-instituto" target="_blank">
     <img id="ieg" src="img/ieg.png">
     <br><br>
-    <p style="font-weight: bold;">O <span style="color: #08086f;font-weight:bold;">IEG</span> Há 10 anos, o IEG elabora soluções em ensino, pesquisa e consultoria em gestão</p>
+    <p style="font-weight: bold;">O <span style="color: #08086f;font-weight:bold;">IEG</span> For 10 years, IEG has developed solutions in teaching, research and management consulting</p>
     </a>
   </div>
   <div>
@@ -360,14 +360,14 @@
     <img id="mba" src="img/mbajr.png">
     </a>
     <br><br>
-    <p style="font-weight: bold;">MBA,Jr. é um conceito cada vez mais presente nas Escolas de Negócios americanas e europeias. É um curso de caráter livre, baseado em uma experiência que visa transformar, ao longo de um ano, jovens em futuros líderes de empresas nacionais e multinacionais.</p>
+    <p style="font-weight: bold;">MBA,Jr. is a concept increasingly present in the American and European Business Schools. It is a free course, based on an experience that aims to transform, over a year, young people into future leaders of national and multinational companies.</p>
   </div>
   <div>
     <a href="https://ieg.com.br/cursos?form=1&curso=16200" target="_blank">
     <img id="excelvalor" class="excelvalor-img" src="img/excel banner.jpg">
     </a>
     <br><br>
-    <p style="font-weight: bold;">Não perca a chance de fazer o novo curso IEG - Estrategistas: <span style="color: #1c5010">EXCEL</span> APLICADO A NEGÓCIOS.</p>
+    <p style="font-weight: bold;">Do not miss the chance to take the new course IEG - Estrategistas: <span style="color: #1c5010">EXCEL</span> APPLIED TO BUSINESS.</p>
   </div>
 </div>
 <br>
@@ -424,7 +424,7 @@
         <div class="contact-map">
           <p style="color: #db3e39;font-weight: bold;">Where to find us:</p>
           <p class="map-font">Our job is not an office job, it's providing result for the companies, in the companies. Sometimes we can't answer the phone, but you just need to fill in the form, that one of our consultors will answer as soon as possible.</p>
-          <p style="color: #db3e39;font-weight: bold;">Adress</p><p class="map-font">R. T-30, 2319 – Setor Bueno – Goiânia/GO</p>
+          <p style="color: #db3e39;font-weight: bold;">Address</p><p class="map-font">R. T-30, 2319 – Setor Bueno – Goiânia/GO</p>
           <div id="mapa">    
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3821.4569817890515!2d-49.2749056!3d-16.7040352!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef13a5e0734f5%3A0xfa7f14d964415472!2sEstrategistas!5e0!3m2!1spt-BR!2sbr!4v1520456651306" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
